@@ -1,3 +1,12 @@
+2006-02-14  Michael Wybrow  <mjwybrow@users.sourceforge.net>
+
+	* src/display/sp-canvas.cpp, display/sp-canvas.h, connector-context.cpp:
+	
+	Revert a previous change that generated enter events for canvas items
+	other than the current one when mouse buttons were depressed.  These 
+	events are now only generated in the connector context, where they are
+	required.
+
 2006-02-13  Michael Wybrow  <mjwybrow@users.sourceforge.net>
 
 	* src/graphlayout/graphlayout.cpp, src/conn-avoid-ref.cpp,
